plugins/javaFX/testData/highlighting/includeBtn.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.layout.*?>
<?import javafx.scene.image.*?>

<AnchorPane xmlns:fx="http://javafx.com/fxml">
  <children>
    <fx:include source="btn.fxml"/>
    <fx:include source="<error descr="Cannot resolve file 'btn1.fxml'">btn1.fxml</error>"/>
  </children>
</AnchorPane>
